name:                tapl-untyped
version:             0.1.0.0
synopsis:            Haskell implementation of the untyped lambda calculus from TAPL chapter 7
-- description:
license:             BSD3
license-file:        LICENSE
author:              Ryan W. Porter
maintainer:          ehamberg@gmail.com
-- copyright:
-- category:
build-type:          Simple
cabal-version:       >=1.8

executable untyped
  main-is: Main.hs
  -- other-modules:
  build-depends:       base      >= 4.6
                     , mtl       >= 2.1
                     , parsec    >= 3.1
                     , directory >= 1.2
                     , filepath  >= 1.3
                     , HUnit     >= 1.2
  hs-source-dirs:      src
